# file-parser-api

./: Dockerfile  main.py  pyproject.toml
